--- a/styles/epitech-norm-linter.less
+++ b/styles/epitech-norm-linter.less
@@ -16,4 +16,19 @@ atom-text-editor::shadow .linter-highlight, .linter-highlight {
       border-bottom: 1px dashed @background-color-info;
     }
   }
+  &.yan {
+    /* Style for Message Badges */
+    &:not(.line-number) {
+      background-color: @background-color-info;
+      color: white;
+    }
+    /* Style for Gutter */
+    .linter-gutter {
+      color: @background-color-info;
+    }
+    /* Style for the text editor highlight */
+    .region {
+      border-bottom: 1px dashed @background-color-info;
+    }
+  }
 }
